--- a/src/Pages/SpotDetailpage.scss
+++ b/src/Pages/SpotDetailpage.scss
@@ -43,6 +43,7 @@
     display: flex;
     overflow: hidden;
     width: 100%;
+    height: 360px;
     flex-wrap: wrap;
     position: relative;
     border-radius: 20px;
